--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <div class="container">
-  <div class="nav-scroller py-1 mb-5">
+  <div class="nav-scroller py-1 mb-lg-5">
     <nav class="nav d-flex justify-content-between">
-      <a class="p-2" href="/">Home</a>
+      <!--<a class="p-2" href="/">Home</a>-->
       <a class="p-2" href="/category/conservative-shit">Conservative Shit</a>
       <a class="p-2" href="/category/liberal-shit">Liberal Shit</a>
       <a class="p-2" href="/category/goofy-shit">Goofy Shit</a>
