--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -6,36 +6,23 @@
     {% for post in site.posts offset:1 limit:6 %}
 
       <div class="col-md-6">
-        <div class="card flex-row mb-4 box-shadow h-md-250">
-          <div class="card-body d-flex flex-column align-items-start">
+        <div class="card flex-row mb-md-4 box-shadow">
+          <div class="card-body d-table flex-column align-items-start" style="position:relative;height:100%;">
             <div class="row w-100">
               <div class="col">
-                <strong class="d-inline-block mb-2 text-primary">{{ post.category }}</strong>
+                <strong id="postcat" class="d-inline-block mb-md-2 text-primary">{{ post.category }}</strong>
               </div>
               <div class="col-auto text-right pr-0">
-                <div class="mb-1 text-muted text-right">{{ post.date | date: "%a, %b %d, %Y" }}</div>
+                <div id="postdate" class="mb-1 text-muted text-right">{{ post.date | date: "%a, %b %d, %Y" }}</div>
               </div>
             </div>
             <h3 class="mb-0 pb-3">
               <a class="text-dark" href="{{ post.url }}">{{ post.title | truncatewords: 18 | slice: 0, 120 }}</a>
             </h3>
             <!--<p class="card-text mb-auto">{{ post.excerpt | slice: 0, 220 }}...</p>-->
-            <a href="{{ post.url }}">Continue reading</a>
+            <div style="position:absolute;bottom:0"><a href="{{ post.url }}">Continue reading...</a></div>
           </div>
-            {% if post.img%}
-            {% assign imgcred = post.imgcredit | replace: "Photo by ", "" | replace: " on Unsplash", "" %}
-            <div style="position:relative;margin:auto;">
-              <img class="card-img-right img-fluid" src="/assets/img/{{ post.img }}" alt="{{ post.alt }}">
-              <div class="imgcredit">
-                <span>Photo by
-                  <a target="_blank" href='https://unsplash.com/@{{ imgcred | replace: " ", "" | slugify }}'>
-                  {{ imgcred }}</a> on
-                  <a target="_blank" href='https://unsplash.com'>Unsplash</a></span>
-                </div>
-            </div>
-            {% else %}
-            <img class="card-img-right img-fluid" data-src="holder.js/200x250?theme=thumb" alt="Post Thumb">
-            {% endif %}
+          {% include summary_image.html %}
         </div>
       </div>
 
