Pagination, categories, device breakpoints

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <footer class="blog-footer">
-  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>
+    Every word on this site is nonsense. Real Shit is just opinions, and the rest is satire. Only a moron would take any of this seriously.</p>
+  <p>
+    If you would like to complain about anything on this site, please step outside and shout your complaint as loudly as you can. We will respond as soon as possible.
+  </p>
   <p>
     <a href="#">Back to top</a>
   </p>
