--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -1,10 +1,8 @@
 {% if post_count > 1 %}
-  <h1>Recent Posts</h1>
-
+<div class="container">
   <div class="row mb-2">
-
-    {% for post in site.posts offset:1 limit:6 %}
-
+    {% for post in paginator.posts %}
+      {% if post.url != site.posts[0].url %}
       <div class="col-md-6">
         <div class="card flex-row mb-md-4 box-shadow">
           <div class="card-body d-table flex-column align-items-start" style="position:relative;height:100%;">
@@ -17,17 +15,44 @@
               </div>
             </div>
             <h3 class="mb-0 pb-3">
-              <a class="text-dark" href="{{ post.url }}">{{ post.title | truncatewords: 18 | slice: 0, 120 }}</a>
+              <a class="text-dark" href="{{ post.url }}">{{ post.title | truncatewords: 16 | slice: 0, 110 }}</a>
             </h3>
             <!--<p class="card-text mb-auto">{{ post.excerpt | slice: 0, 220 }}...</p>-->
             <div style="position:absolute;bottom:0"><a href="{{ post.url }}">Continue reading...</a></div>
           </div>
-          {% include summary_image.html %}
+          {% include image.html %}
         </div>
       </div>
+      {% endif %}
 
     {% endfor %}
 
   </div>
 
+  {% if paginator.total_pages > 1 %}
+  <div class="pagination">
+    {% if paginator.previous_page %}
+      <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo; Prev</a>
+    {% else %}
+      <span>&laquo; Prev</span>
+    {% endif %}
+
+    {% for page in (1..paginator.total_pages) %}
+      {% if page == paginator.page %}
+        <span class="webjeda">{{ page }}</span>
+      {% elsif page == 1 %}
+        <a href="/">{{ page }}</a>
+      {% else %}
+        <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+      {% endif %}
+    {% endfor %}
+
+    {% if paginator.next_page %}
+      <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Next &raquo;</a>
+    {% else %}
+      <span>Next &raquo;</span>
+    {% endif %}
+  </div>
+  {% endif %}
+</div>
 {% endif %}
