--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -2,8 +2,15 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<div class="blog list">
-    {% for post in site.categories[page.category] %}
-        <a href="{{ post.url }}">{{post.title}}</a>
-    {% endfor %}
+<div class="container">
+  <div class="row">
+    <div class="blog-list d-flex flex-wrap p-2 bd-highlight">
+      {% for post in site.categories[page.category] %}
+        <div class="blog-list-item">
+          <a href="{{ post.url }}">{{post.title}}</a>
+          <div class="blog-list-item-date">{{ post.date | date: "%a, %b %d, %Y" }}</div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 </div>
