--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -9,7 +9,29 @@ a.blog-header-logo:hover {
 }
 
 .blog-footer {
-  margin-top: 360px;
+  margin-top: 110px;
+}
+
+.blog-list {
+  width: 100%;
+}
+
+.blog-list-item {
+  border: 1px solid #ddd;
+  box-shadow: 1px 1px #ccc;
+  border-radius: 4px;
+  padding: 6px 12px;
+  padding-bottom: 18px;
+  margin: 6px;
+  width: 22.5%;
+  position:relative;
+}
+
+.blog-list-item-date {
+  font-size: .5rem;
+  position: absolute;
+  bottom: 3px;
+  right: 6px
 }
 
 .card-body {
@@ -38,7 +60,6 @@ a.blog-header-logo:hover {
   display: block;
   position: absolute;
   bottom: 0;
-  left: 0;
   background: #efefef;
   color: #333;
   font-size: 9px;
@@ -46,11 +67,24 @@ a.blog-header-logo:hover {
   padding: 4px;
   text-align: center;
   max-width: 200px;
+  border-radius: 0 0 3px 0;
+}
+
+.hero .imgcredit {
+  right: 0;
+}
+
+.hero {
+  width: 240px;
+  height: 120px;
+  margin: auto;
+  position:relative;
 }
 
 .hero-img {
-  height: 250px;
-  width: 139px;
+  height: 120px;
+  width: 240px;
+  border-radius: 3px;
 }
 
 #postcat,
@@ -69,7 +103,30 @@ h1 {
 }
 
 h3 {
-  font-size: 0.65rem;
+  font-size: 0.7rem;
+}
+
+.pagination a,
+.pagination span {
+  padding: 7px 18px;
+  border: 1px solid #eee;
+  margin-left: -2px;
+  margin-right: -2px;
+  background-color: #ffffff;
+  display: inline-block;
+}
+
+.pagination a {
+  &:hover {
+    background-color: #f1f1f1;
+    color: #333;
+  }
+}
+
+.pagination {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 @media (min-width: 768px) {
   h3 {
@@ -82,24 +139,30 @@ h3 {
 }
 @media (min-width: 992px) {
   .card {
+    height: 160px;
     font-size: 1rem;
   }
 
   .card-img-right {
-    width: 180px;
-    height: 180px;
+    width: 160px;
+    height: 160px;
+  }
+
+  .hero-img, .hero {
+    height: 250px;
+    width: 450px;
+  }
+
+  .hero-title {
+    padding-right: 18px;
   }
 
   h3 {
-    font-size: 1.47rem;
+    font-size: 1.3rem;
   }
 
   h1 {
     font-size: 2rem;
-  }
-
-  .thumb {
-    right: -9px;
   }
 
   .imgcredit {
@@ -111,11 +174,7 @@ h3 {
   .card,
   .lead,
   .nav-scroller {
-    font-size: 1rem;
-  }
-
-  .card {
-    height: 180px;
+    font-size: 0.8rem;
   }
 }
 /*
