--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,9 @@
     {% assign post = page %}
     {% include image.html type="post" %}
   </div>
-  {{ content }}
+  <div class="blog-content">
+    {{ content }}
+  </div>
 </main>
 
 {% include footer.html %}
