Add social media: sharethis buttons, meta tags, imgs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,9 @@
 {% include page_top.html %}
 {% include header.html %}
 {% include nav.html %}
+{% include share.html %}
 
-<main role="main" class="container">
+<main role="main">
   {{ content }}
 </main>
 
