--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <header class="blog-header py-md-3">
+<div class="container" style="position:relative">
+  <header class="blog-header py-3">
     <div class="text-center">
       <a class="blog-header-logo" href="/">Newsy McNewsface</a>
       <div style="padding-top:.5em;">
