--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,11 +1,11 @@
 <div class="container">
-  <div class="nav-scroller py-1 mb-lg-2">
+  <div class="nav-scroller mb-lg-2">
     <nav class="nav d-flex justify-content-between">
       <!--<a class="p-2" href="/">Home</a>-->
-      <a class="p-2" href="/category/conservative-shit">Conservative Shit</a>
-      <a class="p-2" href="/category/liberal-shit">Liberal Shit</a>
-      <a class="p-2" href="/category/goofy-shit">Goofy Shit</a>
-      <a class="p-2" href="/category/real-shit">Real Shit</a>
+      <a class="p-md-2" href="/category/conservative-shit">Conservative Shit</a>
+      <a class="p-md-2" href="/category/liberal-shit">Liberal Shit</a>
+      <a class="p-md-2" href="/category/goofy-shit">Goofy Shit</a>
+      <a class="p-md-2" href="/category/real-shit">Real Shit</a>
   <!--
       <a class="p-2 text-muted" href="#">World</a>
       <a class="p-2 text-muted" href="#">U.S.</a>
