--- a/_includes/page_top.html
+++ b/_includes/page_top.html
@@ -1,13 +1,50 @@
+{% assign title = page.title | append: " | " | append: site.title %}
+{% if post.img %}
+  {% assign imgsrc= "/assets/img/" | append: post.img %}
+{% else %}
+  {% assign imgsrc= "/assets/img/default.jpg" %}
+{% endif %}
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>{{ page.title }} - {{ site.title }}</title>
+  <title>{{ title }}</title>
+
+  <meta name="description" content="{{ page.excerpt | slice: 0, 155 }}" />
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:title" content="{{ title }}">
+  <meta name="twitter:description" content="{{ page.excerpt | slice: 0, 200 }}">
+  <!--
+  <meta name="twitter:creator" content="@author_handle">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@publisher_handle">
+  -->
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <!--
+  <meta name="twitter:image:src" content="http://www.example.com/image.jpg">
+  -->
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="{{ title }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:image" content="{{ site.url }}{{ imgsrc }}" />
+  <meta property="og:description" content="{{ page.excerpt }}" />
+  <meta property="og:site_name" content="Newsy McNewsface" />
+
+  <!--<meta property="fb:admins" content="Facebook numberic ID" />-->
+
+  {% if include.type == "post" %}
+  <meta property="og:type" content="article" />
+  <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%dT%H:%M:%S%z" }}" />
+  {% endif %}
+
   <link href="https://fonts.googleapis.com/css?family=Domine&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+
   <script src="https://kit.fontawesome.com/613ba838d6.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -31,6 +68,8 @@
             enable_page_level_ads: true
        });
   </script>
+
+  <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5d81065bab6f1000123c9155&product=inline-share-buttons' async='async'></script>
 
 </head>
 
