--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
-{% include page_top.html %}
+{% include page_top.html type="post" %}
 {% include header.html %}
 {% include nav.html %}
+{% include share.html %}
 
 <main role="main" class="container blog-post">
   <h1>{{ page.title }}</h1>
