--- a/_sass/_bsblog.scss
+++ b/_sass/_bsblog.scss
@@ -30,7 +30,8 @@ h1, h2, h3, h4, h5, h6 {
 .nav-scroller {
   position: relative;
   z-index: 2;
-  height: 2.75rem;
+  margin-top: .5rem;
+  /*height: 2.75rem;*/
   overflow-y: hidden;
 }
 
@@ -40,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  padding-bottom: 1rem;
+  /*padding-bottom: 1rem;*/
   margin-top: -1px;
   overflow-x: auto;
   text-align: center;
