Change Newsy to Newsie to match domain

--- a/_includes/page_top.html
+++ b/_includes/page_top.html
@@ -32,7 +32,7 @@
   <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
   <meta property="og:image" content="{{ site.url }}{{ imgsrc }}" />
   <meta property="og:description" content="{{ page.excerpt }}" />
-  <meta property="og:site_name" content="Newsy McNewsface" />
+  <meta property="og:site_name" content="Newsie McNewsface" />
 
   <!--<meta property="fb:admins" content="Facebook numberic ID" />-->
 
