--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="container" style="position:relative">
   <header class="blog-header py-3">
     <div class="text-center">
-      <a class="blog-header-logo" href="/">Newsy McNewsface</a>
+      <a class="blog-header-logo" href="/">Newsie McNewsface</a>
       <div style="padding-top:.5em;">
         <small>The Best News From The Best Country In The United States</small>
       </div>
