--- a/_includes/most_recent.html
+++ b/_includes/most_recent.html
@@ -9,7 +9,7 @@
           <p class="lead mb-0"><a href="{{ post.url }}" class="text-white font-weight-bold">Continue reading...</a></p>
         </div>
         <div class="col-md px-0">
-          <a href="{{ post.url }}">{% include image.html type="hero" %}</a>
+          {% include image.html type="hero" %}
         </div>
       </div>
     </div>
