--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="nav-scroller mb-lg-2">
+  <div class="nav-scroller mb-2">
     <nav class="nav d-flex justify-content-between">
       <!--<a class="p-2" href="/">Home</a>-->
       <a class="p-md-2" href="/category/conservative-shit">Conservative Shit</a>
