--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<div class="blog list">
-    {% for post in site.categories[page.category] %}
-        <a href="{{ post.url }}">{{post.title}}</a>
-    {% endfor %}
+<div class="container">
+  <h1>{{ page.title }}</h1>
+  <div class="blog list">
+      {% for post in site.categories[page.category] %}
+          <a href="{{ post.url }}">{{post.title}}</a>
+      {% endfor %}
+  </div>
 </div>
