--- a/_includes/page_top.html
+++ b/_includes/page_top.html
@@ -33,7 +33,7 @@
   <meta property="og:image" content="{{ site.url }}{{ imgsrc }}" />
   <meta property="og:description" content="{{ page.excerpt }}" />
   <meta property="og:site_name" content="Newsie McNewsface" />
-  <meta property="fb:page_id" content="newsiemcnewsface" />
+  <meta property="fb:app_id" content="newsiemcnewsface" />
 
   <!--<meta property="fb:admins" content="Facebook numberic ID" />-->
 
