--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -3,9 +3,17 @@ layout: default
 ---
 <div class="container">
   <h1>{{ page.title }}</h1>
-  <div class="blog list">
-      {% for post in site.categories[page.category] %}
+
+  <div class="row">
+    <div class="blog-list d-flex flex-wrap p-2 bd-highlight">
+      {% assign filtered_posts = site.posts | where: 'author', page.title %}
+      {% for post in filtered_posts %}
+        <div class="blog-list-item">
           <a href="{{ post.url }}">{{post.title}}</a>
+          <div class="blog-list-item-date">{{ post.date | date: "%a, %b %d, %Y" }}</div>
+        </div>
       {% endfor %}
+    </div>
   </div>
+
 </div>
