--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -3,12 +3,18 @@
   <div class="row mb-2">
     {% for post in paginator.posts %}
       {% if post.url != site.posts[0].url %}
+      {% for category in site.data.categories %}
+        {% if category.slug == post.category %}
+          {% assign cat = category.name %}
+          {% assign slug = category.slug %}
+        {% endif %}
+      {% endfor %}
       <div class="col-md-6">
         <div class="card flex-row mb-md-4 box-shadow">
           <div class="card-body d-table flex-column align-items-start" style="position:relative;height:100%;">
             <div class="row w-100">
               <div class="col">
-                <a href="/category/{{ post.category | slugify }}" id="postcat" class="d-inline-block mb-md-2 text-primary">{{ post.category }}</a>
+                <a href="/category/{{ slug }}" id="postcat" class="d-inline-block mb-md-2 text-primary">{{ cat }}</a>
               </div>
               <div class="col-auto text-right pr-0">
                 <div id="postdate" class="mb-1 text-muted text-right">{{ post.date | date: "%a, %b %d, %Y" }}</div>
