Trying to fix weird footer link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
   </p>
   <h3>Privacy</h3>
   <p>
-    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies [here](https://policies.google.com/technologies/partner-sites) (and opt out if you wish).
+    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies [here](https://policies.google.com/technologies/partner-sites) &lpar;and opt out if you wish&rpar;.
   </p>
 </footer>
