--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
   <p>
     If you would like to complain about anything on this site, please step outside and shout your complaint as loudly as you can. We will respond as soon as possible.
   </p>
-  <h3>Privacy</h3>
+  <h3 style="text-align:left;">Privacy</h3>
   <p>
-    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies [here](https://policies.google.com/technologies/partner-sites) &lpar;and opt out if you wish&rpar;.
+    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies <a href="https://policies.google.com/technologies/partner-sites" target="_blank">here</a> &lpar;and opt out if you wish&rpar;.
   </p>
 </footer>
