Remove /category from cat links to better conform to Jekyll generated post links

--- a/_includes/recent.html
+++ b/_includes/recent.html
@@ -14,7 +14,7 @@
           <div class="card-body d-table flex-column align-items-start" style="position:relative;height:100%;">
             <div class="row w-100">
               <div class="col">
-                <a href="/category/{{ slug }}" id="postcat" class="d-inline-block mb-md-2 text-primary">{{ cat }}</a>
+                <a href="/{{ slug }}" id="postcat" class="d-inline-block mb-md-2 text-primary">{{ cat }}</a>
               </div>
               <div class="col-auto text-right pr-0">
                 <div id="postdate" class="mb-1 text-muted text-right">{{ post.date | date: "%a, %b %d, %Y" }}</div>
