Add a page add in addition to auto ad

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -22,4 +22,15 @@
   -->
     </nav>
   </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- responsive -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-0827163632312665"
+       data-ad-slot="9723565223"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </div>
