Move page ad below follow links

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -7,4 +7,17 @@
     <div class="follow-us">Follow us on <br> Facebook and/or Twitter!</div>
     <div class="sharethis-inline-follow-buttons"></div>
   </div>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- responsive -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-0827163632312665"
+       data-ad-slot="9723565223"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  
 </div>
