Pad page ad bottom

--- a/_includes/share.html
+++ b/_includes/share.html
@@ -2,7 +2,7 @@
   <div class="sharethis-sticky-share-buttons"></div>
 </div>
 
-<div class="container">
+<div class="container" style="padding-bottom:18px;">
   <div id="social-header" class="jumbotron text-white rounded bg-dark text-center">
     <div class="follow-us">Follow us on <br> Facebook and/or Twitter!</div>
     <div class="sharethis-inline-follow-buttons"></div>
@@ -19,5 +19,5 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
-  
+
 </div>
