Tweaking includes and ad headers

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,6 @@
   </p>
   <p>
     <b>Privacy:</b>
-    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies <a href="https://policies.google.com/technologies/partner-sites" target="_blank">here</a> &lpar;and opt out if you wish&rpar;.
+    Newsie McNewsface doesn't use cookies or store any information. We do use Google Analytics and Adsense, which do use cookies. You can view Google's policies <a href="https://policies.google.com/technologies/partner-sites" target="_blank">here</a> &lpar;and opt out if you wish&rpar;. Additionally, the sharing function we offer uses ShareThis, which has its own data policies, available <a href="https://sharethis.com/privacy/">here</a>.
   </p>
 </footer>
