--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,5 @@
 {% include page_top.html %}
-{% include header.html %}
-{% include nav.html %}
-{% include share.html %}
+{% include headers.html %}
 
 <main role="main">
   {{ content }}
