--- a/_includes/share.html
+++ b/_includes/share.html
@@ -2,22 +2,10 @@
   <div class="sharethis-sticky-share-buttons"></div>
 </div>
 
-<div class="container" style="padding-bottom:18px;">
+<div class="container">
   <div id="social-header" class="jumbotron text-white rounded bg-dark text-center">
     <div class="follow-us">Follow us on <br> Facebook and/or Twitter!</div>
     <div class="sharethis-inline-follow-buttons"></div>
   </div>
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- responsive -->
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-client="ca-pub-0827163632312665"
-       data-ad-slot="9723565223"
-       data-ad-format="auto"
-       data-full-width-responsive="true"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
 
 </div>
