New google auto ad code

--- a/_includes/page_top.html
+++ b/_includes/page_top.html
@@ -70,10 +70,5 @@
 
 <!-- Google Adsense Auto Ad -->
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-0827163632312665",
-          enable_page_level_ads: true
-     });
-</script>
+
+<script data-ad-client="ca-pub-0827163632312665" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
