Political Argument Generator

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,3 +23,8 @@
     </nav>
   </div>
 </div>
+<div style="text-align:center;padding-bottom:6px;">
+  <a class="p-md-2" style="font-weight:bold;" href="/political-argument-generator">
+    New! Try Our Political Argument Generator
+  </a>
+<div>
