--- a/_includes/image.html
+++ b/_includes/image.html
@@ -3,11 +3,11 @@
 {% assign imgalt = "US flag" %}
 
 {% if post.img %}
-  {% assign imgsrc= "/assets/img/thumbs/" | append: post.img | replace: ".jpg", "-thumb.jpg" %}
+  {% assign imgsrc= "../assets/img/thumbs/" | append: post.img | replace: ".jpg", "-thumb.jpg" %}
   {% assign imgcred = post.imgcredit | replace: "Photo by ", "" | replace: " on Unsplash", "" %}
   {% assign imgalt = post.alt %}
 {% else %}
-  {% assign imgsrc= "/assets/img/thumbs/default-thumb.jpg" %}
+  {% assign imgsrc= "../assets/img/thumbs/default-thumb.jpg" %}
   {% assign imgcred = "Photo by Aaron Burden on Unsplash" | replace: "Photo by ", "" | replace: " on Unsplash", "" %}
 {% endif %}
 
@@ -17,9 +17,9 @@
   {% assign thumbclass = "hero" %}
 
   {% if post.img %}
-    {% assign imgsrc= "/assets/img/" | append: post.img %}
+    {% assign imgsrc= "../assets/img/" | append: post.img %}
   {% else %}
-    {% assign imgsrc= "/assets/img/default.jpg" %}
+    {% assign imgsrc= "../assets/img/default.jpg" %}
   {% endif %}
 
 {% endif %}
@@ -31,9 +31,9 @@
   {% assign thumbclass = "post" %}
 
   {% if post.img %}
-    {% assign imgsrc= "/assets/img/" | append: post.img %}
+    {% assign imgsrc= "../assets/img/" | append: post.img %}
   {% else %}
-    {% assign imgsrc= "/assets/img/default.jpg" %}
+    {% assign imgsrc= "../assets/img/default.jpg" %}
     {% endif %}
 
 {% endif %}
